@@ -28,7 +28,7 @@ import edu.colorado.phet.linegraphing.common.view.PointToolNode;
 import edu.colorado.phet.linegraphing.linegame.LineGameConstants;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel.PlayState;
-import edu.colorado.phet.linegraphing.linegame.model.maketheequation.MTE_Challenge;
+import edu.colorado.phet.linegraphing.linegame.model.MTE_Challenge;
 import edu.colorado.phet.linegraphing.linegame.view.ChallengeNode;
 import edu.colorado.phet.linegraphing.linegame.view.EquationBoxNode;
 import edu.umd.cs.piccolo.PNode;
