@@ -25,7 +25,7 @@ import edu.colorado.phet.linegraphing.linegame.LineGameConstants;
 import edu.colorado.phet.linegraphing.linegame.model.LineForm;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel.PlayState;
-import edu.colorado.phet.linegraphing.linegame.model.placepoints.P3P_Challenge;
+import edu.colorado.phet.linegraphing.linegame.model.P3P_Challenge;
 import edu.colorado.phet.linegraphing.linegame.view.ChallengeNode;
 import edu.colorado.phet.linegraphing.linegame.view.EquationBoxNode;
 import edu.colorado.phet.linegraphing.pointslope.view.PointSlopeEquationNode;
